home page redesign

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -84,6 +84,10 @@ a {
    opacity: 1;
 }
 
+.scrollbar {
+   @include customScrollBar();
+}
+
 @media (hover: hover) {
    .resizer {
       opacity: 0;
